mise en place modal + remember me + localStorage

--- a/frontopc13/src/main.scss
+++ b/frontopc13/src/main.scss
@@ -3,6 +3,8 @@
 @use "../src/component/homePage/homePage.scss";
 @use "../src/component/signinPage/signinPage.scss";
 @use "../src/component/userPage/userPage.scss";
+@use "../src/component//modalChangeName/modalChangeName.scss";
+@use "../src/component/modalrelog/modalrelog.scss";
 
 * {
   margin: 0;
