--- a/frontopc13/src/style/style.css
+++ b/frontopc13/src/style/style.css
@@ -278,6 +278,83 @@
   color: #fff;
 }
 
+.modalBg {
+  position: absolute;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgb(212, 212, 212);
+  opacity: 0.4;
+}
+
+.modalContent {
+  position: absolute;
+  width: 50%;
+  height: 450px;
+  background-color: #12002b;
+  top: 150px;
+  left: 25%;
+}
+
+.modalContentForm {
+  margin: auto;
+  padding-top: 30px;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+}
+.modalContentForm p {
+  font-size: large;
+}
+.modalContentForm label {
+  margin-top: 30px;
+  font-size: medium;
+}
+.modalContentForm input {
+  margin-top: 10px;
+  height: 30px;
+  padding-left: 10px;
+}
+.modalContentForm button {
+  margin-top: 30px;
+}
+
+.modalrelogBg {
+  position: absolute;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgb(212, 212, 212);
+  opacity: 0.4;
+}
+
+.modalrelogContent {
+  position: absolute;
+  width: 50%;
+  height: 250px;
+  background-color: #12002b;
+  top: 150px;
+  left: 25%;
+}
+
+.modalrelogContent {
+  margin: auto;
+  padding-top: 30px;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+}
+.modalrelogContent p {
+  font-size: large;
+  width: 80%;
+  margin: auto;
+}
+.modalrelogContent button {
+  width: 80%;
+  margin-top: 30px;
+  margin: auto;
+}
+
 * {
   margin: 0;
   padding: 0;
